<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.alcazardesanjuan.milnoseequivocan.activity_aboutus">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Text_aboutus_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Aboutus"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentAbout"/>

        <!-- Este View es el separador (La línea roja) -->
        <View
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_height="2dp"
            android:background="#a0041c"/>

        <TextView
            style="@style/Text_aboutus_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equipo"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dani Elektroduende"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dario"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/javi"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jesus"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manu"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miriam"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sergio"/>

        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tino"/>

        <View
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_height="2dp"
            android:background="#a0041c"/>

        <TextView
            style="@style/Text_aboutus_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuestroprofe"/>
        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dudasres"/>
        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kike"/>

        <View
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_height="2dp"
            android:background="#a0041c"/>

        <TextView
            style="@style/Text_aboutus_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menciones"/>
        <TextView
            style="@style/Text_aboutus_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menciones_content"/>

    </LinearLayout>
</ScrollView>
